--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: daattali/beautiful-jekyll
+remote_theme: chrisrhymes/bulma-clean-theme
+#remote_theme: daattali/beautiful-jekyll
 
 title: Passwordless
 
