--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author: Arnaud Dagnelies
 
 navbar-links:
   Usage: usage
-  Webauthn Guide: webauthn_guide
+  Webauthn Guide: webauthn-guide
   Security & Privacy FAQ: security
   Thoughts: thoughts
   
