--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-remote_theme: amitmerchant1990/reverie
-#remote_theme: daattali/beautiful-jekyll
+remote_theme: daattali/beautiful-jekyll
 
 title: Passwordless
 
@@ -19,7 +18,7 @@ navbar-border-col: "#7957d5"
 page-col: "#fff"
 text-col: "#000"
 link-col: "#7957d5"
-hover-col: "#f2effb"
+hover-col: "#552fbc"
 
 footer-col: "#f2effb"
 footer-text-col: "#552fbc"
