--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#remote_theme: daattali/beautiful-jekyll
+remote_theme: daattali/beautiful-jekyll
 #remote_theme: just-the-docs/just-the-docs
 
 title: Passwordless
