--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,10 @@ navbar-links:
     - Introduction: webauthn/1_introduction
     - Regsitration: webauthn/2_registration
     - Authentication: webauthn/3_authentication
-  Security & Privacy FAQ: security
+    - Security & Privacy: security
   Thoughts: 
-    - E-Mails vs Usernames: thoughts/emails-vs-usernames.md
+    - E-Mails vs Usernames: thoughts/emails-vs-usernames
+    - User Guidance: thoughts/guidance
 
 
 edit_page_button: true
