--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: Passwordless
 author: Arnaud Dagnelies
 
 navbar-links:
+  Playground: playground.html
   Usage:
     - Introduction: usage/1_introduction
     - JS Helper library: usage/2_js
