--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ edit_page_button: true
 #medium: "#6dc9f7"
 #dark: "#0089ef"
 
-navbar-col: "#6dc9f7"
+navbar-col: "#0089ef"
 navbar-text-col: "#fff"
 navbar-border-col: "#0089ef"
 
