--- a/_config.yml
+++ b/_config.yml
@@ -9,21 +9,23 @@ author: Arnaud Dagnelies
 navbar-var-length: true
 
 navbar-links:
-  Playground: https://webauthn.passwordless.id/demos/playground.html
   Usage:
-    - Introduction: usage/1_introduction
-    - JS Helper library: usage/2_js
-#  Protocols:
-#    OAuth2 / OpenID:
-#      - Introduction: protocols/oauth2/1_introduction
-  Webauthn Guide:
+    - Overview: TODO
+    - Browser side:
+    - Server side:
+  Webauthn:
     - Introduction: protocols/webauthn/1_introduction
+    - Helper Library: https://github.com/passwordless-id/webauthn
+    - Playground: https://webauthn.passwordless.id/demos/playground.html
     - Registration: protocols/webauthn/2_registration
     - Authentication: protocols/webauthn/3_authentication
     - Security & Privacy: protocols/webauthn/4_security
-  Thoughts: 
     - E-Mails vs Usernames: thoughts/emails-vs-usernames
     - User Guidance: thoughts/guidance
+#  Protocols:
+#    OAuth2 / OpenID:
+#      - Introduction: protocols/oauth2/1_introduction    
+    
 
 
 edit_page_button: true
