--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,10 @@ navbar-links:
   Demo:
     - Live: https://passwordless-id.github.io/demo/
     - Source: https://github.com/passwordless-id/demo
+  Usage:
+    - Overview: usage/overview
+    - Browser side: https://passwordless-id.github.io/connect/
+    - Server side: usage/server
   Pricing: pricing
   Webauthn:
     - Introduction: protocols/webauthn/1_introduction
