added blog link

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ navbar-links:
     - Security & Privacy: protocols/webauthn/4_security
     - E-Mails vs Usernames: thoughts/emails-vs-usernames
     - User Guidance: thoughts/guidance
+  Blog: https://blog.passwordless.id
 #  Protocols:
 #    OAuth2 / OpenID:
 #      - Introduction: protocols/oauth2/1_introduction    
