--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
     - E-Mails vs Usernames: thoughts/emails-vs-usernames
     - User Guidance: thoughts/guidance
   Community:
+    - Discord: https://discord.gg/v73cHHnqzZ
     - Github: https://github.com/passwordless-id/www
     - Blog: https://blog.passwordless.id
     - Roadmap: https://github.com/orgs/passwordless-id/projects/1
